--- a/RecursionAssignment.ipynb
+++ b/RecursionAssignment.ipynb
@@ -241,7 +241,7 @@
     "This approach directly can be implemented what is the provided set of function and base values so is comparatively simple to implement and intuitive, with a basic understanding of recursion. That being said, for each value, the function needs to be called 2 times, during each of which the next numbers down in the sequence would call the function 2 times each and so on. This leads to a $O(2^n)$ time complexity. In terms of space complexity, since the call stack would go down from $f(n)$ to $f(1)$ or $f(0)$ depending on n, this leads to a space complexity of $O(n)$.\n",
     "\n",
     "#### Dynamic Programming with memoization\n",
-    "This approach is an improvement in terms of time complexity over the recursive-only dynamic programming approach since it prevents recalculation if an number is already calculated in the process of calculating $f(n)$. This ensures the value of the function is only calculated once for 1 through n - 1 only once, bringing the time complexity down to $O(n)$. Since this approach does require an array of size n to store all values of $f(n)$ where n = 0 to n-1, the space complexity is $O(n).  \n",
+    "This approach is an improvement in terms of time complexity over the recursive-only dynamic programming approach since it prevents recalculation if an number is already calculated in the process of calculating $f(n)$. This ensures the value of the function is only calculated once for 1 through n - 1 only once, bringing the time complexity down to $O(n)$. Since this approach does require an array of size n to store all values of $f(n)$ where n = 0 to n-1, the space complexity is $O(n)$.  \n",
     "\n",
     "\n",
     "#### For calculating the value for n = 1000, \n",
