--- a/RecursionAssignment.ipynb
+++ b/RecursionAssignment.ipynb
@@ -246,7 +246,7 @@
     "\n",
     "#### For calculating the value for n = 1000, \n",
     "- The program for the analytic approach would be a single calculation that would be rapid, while also not requiring a lot of memory compared to much lower values of n. The complexity for this method is the manual process required to derive the analytic equation from the initial function.\n",
-    "- The recursive dynamic programming approach would need to make function calls on the order of $2^1000$, which would be extremely inefficient. (On anaconda workspace, it does not return a result, while on my personal computer I get errors saying the maximum call depth exceeded.)\n",
+    "- The recursive dynamic programming approach would need to make function calls on the order of $2^{1000}$, which would be extremely inefficient. (On anaconda workspace, it does not return a result, while on my personal computer I get errors saying the maximum call depth exceeded.)\n",
     "- The dynamic programming approach with memoization would need to calculate the values for $f(n)$ from 0 going up to 1000, which is much more than the single calculation needed for the analytic approach. It would also require storing all the 1000 results, so there is some memory overhead as well, although for 1000 numbers, it may not be too high."
    ]
   }
